Added custom ransac to project with new function RansacPlane

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,9 @@ list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
 
 
 add_executable (environment src/environment.cpp src/render/render.cpp src/processPointClouds.cpp src/ransac/ransac3d.cpp)
-add_executable(ransac src/quiz/ransac/ransac2d.cpp src/render/render.cpp src/processPointClouds.cpp)
+#add_executable(ransac src/quiz/ransac/ransac2d.cpp src/render/render.cpp src/processPointClouds.cpp)
 target_link_libraries (environment ${PCL_LIBRARIES})
-target_link_libraries (ransac ${PCL_LIBRARIES})
+#target_link_libraries (ransac ${PCL_LIBRARIES})
 
 
 
